# web-benchmark

./: Readme.md  Result.md  open-api.spec.yaml
go-gin/: .gitignore  Dockerfile  Readme.md  go.mod  go.sum  main.go
go-gin/model/: model.go
go-gin/routes/: health.go  helper.go  note.go
go-gin/routes/dtos/: dtos.go
locust/: Readme.md  api-benchmark.py  go-gin.py
net-core/: Dockerfile  Program.cs  Readme.md
net-core/Controllers/: HealthController.cs  NoteController.cs
net-core/Properties/: launchSettings.json
node-express/: Readme.md  package-lock.json  package.json
node-express/src/: main.ts
node-express/src/routes/: health.ts  note.ts
node-fastify/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
node-fastify/src/: main.ts
node-fastify/src/routes/: health.ts  note.ts
rust-actix/: .gitignore  Cargo.toml  Dockerfile  Readme.md
rust-actix/src/: main.rs
rust-actix/src/models/: model.rs
rust-actix/src/routes/: health.rs  note.rs
rust-rocket/: Cargo.toml  Dockerfile  Readme.md  Rocket.toml
rust-rocket/src/: main.rs
rust-rocket/src/routes/: health.rs  mod.rs  note.rs
